--- a/vue/package.json
+++ b/vue/package.json
@@ -10,18 +10,28 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore src"
   },
   "dependencies": {
+    "@radix-icons/vue": "^1.0.0",
+    "@vueuse/core": "^10.9.0",
     "axios": "^0.21.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "radix-vue": "^1.6.2",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.4",
-    "vuex": "^4.1.0",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "vite": "^3.2.7",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.42.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^7.20.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^3.2.7",
     "vue-eslint-parser": "^9.3.0"
   }
 }
