Added sign up form

--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
+    "@vee-validate/zod": "^4.12.6",
     "@vueuse/core": "^10.9.0",
     "axios": "^0.21.4",
     "class-variance-authority": "^0.7.0",
@@ -18,9 +19,11 @@
     "radix-vue": "^1.6.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.12.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
