--- a/vue/package.json
+++ b/vue/package.json
@@ -22,6 +22,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.12.6",
     "vue": "^3.3.4",
+    "vue-picture-cropper": "^0.7.0",
     "vue-router": "^4.2.1",
     "vuex": "^4.1.0",
     "zod": "^3.22.4"
