--- a/vue/package.json
+++ b/vue/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.21.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.368.0",
+    "moment": "^2.30.1",
     "radix-vue": "^1.6.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
